# neoclient

./: README.md  pyproject.toml  pytest.ini  requirements.txt
examples/: inference_example.py
src/neoclient/: __init__.py  neoclient.py  test.py
src/neoclient/resources/: __init__.py  chat_completions.py  completions.py  supervisor_completions.py
src/neoclient/types/: __init__.py  chat_completion.py  chat_completion_choice.py  chat_message.py  completion.py  completion_choice.py  supervisor.py  supervisor_choice.py  usage.py
tests/integration/: conftest.py  test_chat_completion.py  test_completion.py
tests/unit/: test_neoclient.py
